Applied correct property of text-align / working properly.

--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body
 .DBOX-T-01
 {
     width:                      12vw;
-    
+    text-align:                 center;
     
     font-size:                  5vh;
 }
